streaming-platform/k8s/daemonset-and-priorityclass.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: max-map-count-setter
  namespace: kube-system
spec:
  selector:
    matchLabels: { name: max-map-count-setter }
  template:
    metadata:
      labels: { name: max-map-count-setter }
    spec:
      priorityClassName: sysctl-daemonset-priority
      nodeSelector:
        cloud.google.com/compute-class: "Balanced"
      containers:
        - name: pause
          image: registry.k8s.io/pause:3.9
