streaming-platform/k8s/httproute-cicd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cicd-route
  namespace: cicd
spec:
  parentRefs:
    - name: streaming-gateway
      namespace: streaming
  rules:
    - matches:
        - path: { type: PathPrefix, value: /jenkins }
      backendRefs:
        - name: jenkins
          port: 8080
    - matches:
        - path: { type: PathPrefix, value: /sonarqube }
      backendRefs:
        - name: sonarqube-sonarqube
          port: 9000
